crates/alder-parse/src/item/snapshots/alder_parse__item__enum___tests__error_end.snap
---
source: crates/alder-parse/src/item/enum_.rs
description: "enum Color { Red Green }"
---
End(
    ExpectedEnd {
        opening: Position {
            line: 1,
            column: 12,
        },
        boundary: Position {
            line: 1,
            column: 17,
        },
        unexpected: Position {
            line: 1,
            column: 18,
        },
    },
)
