crates/alder-parse/src/item/snapshots/alder_parse__item__enum___tests__error_no_name.snap
---
source: crates/alder-parse/src/item/enum_.rs
description: "enum { A }"
---
Name(
    1,
    6,
)
