crates/alder-parse/src/item/snapshots/alder_parse__item__enum___tests__error_open.snap
---
source: crates/alder-parse/src/item/enum_.rs
description: enum Color Red
---
Open(
    1,
    12,
)
