crates/alder-parse/src/item/snapshots/alder_parse__item__enum___tests__error_payload_on_next_line.snap
---
source: crates/alder-parse/src/item/enum_.rs
description: "enum Shape {\n    Circle\n    (Number),\n}\n"
---
End(
    ExpectedEnd {
        opening: Position {
            line: 1,
            column: 12,
        },
        boundary: Position {
            line: 2,
            column: 11,
        },
        unexpected: Position {
            line: 3,
            column: 5,
        },
    },
)
