crates/alder-parse/src/item/snapshots/alder_parse__item__enum___tests__error_variant_arg.snap
---
source: crates/alder-parse/src/item/enum_.rs
description: "enum Shape { Circle(1) }"
---
VariantArg(
    Start(
        1,
        21,
    ),
    1,
    21,
)
