crates/alder-parse/src/item/snapshots/alder_parse__item__enum___tests__error_variant_arg_end.snap
---
source: crates/alder-parse/src/item/enum_.rs
description: "enum Shape { Circle(Number Number) }"
---
VariantArgEnd(
    ExpectedEnd {
        opening: Position {
            line: 1,
            column: 20,
        },
        boundary: Position {
            line: 1,
            column: 27,
        },
        unexpected: Position {
            line: 1,
            column: 28,
        },
    },
)
