crates/alder-parse/src/item/snapshots/alder_parse__item__enum___tests__error_variant_lowercase.snap
---
source: crates/alder-parse/src/item/enum_.rs
description: "enum Color { red }"
---
Variant(
    1,
    14,
)
