crates/alder-parse/src/item/snapshots/alder_parse__item__enum___tests__error_variant_record.snap
---
source: crates/alder-parse/src/item/enum_.rs
description: "enum Shape { Rect { width } }"
---
VariantRecord(
    Colon(
        1,
        27,
    ),
    1,
    19,
)
